--- a/DayCare/DayCare/Views/Dashboard/DashBoardView.xaml
+++ b/DayCare/DayCare/Views/Dashboard/DashBoardView.xaml
@@ -5,8 +5,45 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:DayCare.Views.Dashboard"
              mc:Ignorable="d" 
-             d:DesignHeight="300" d:DesignWidth="300">
+             d:DesignHeight="600" d:DesignWidth="600">
     <Grid>
-            
+        <WrapPanel VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Margin="25">
+            <Border Width="150" Height="200" Margin="25">
+                <Grid>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="1*"/>
+                        <RowDefinition Height="Auto"/>
+                    </Grid.RowDefinitions>
+                    <Image Source="/DayCare;component/Resources/family.png"/>
+                    <Button Grid.Row="1" Content="Administratie" x:Name="AdministrationAction"
+                            Style="{DynamicResource ButtonStyle}" FontFamily="Comic Sans MS" FontSize="22" />
+                </Grid>
+            </Border>
+
+            <Border Width="150" Height="200" Margin="25">
+                <Grid>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="1*"/>
+                        <RowDefinition Height="Auto"/>
+                    </Grid.RowDefinitions>
+                    <Image Source="/DayCare;component/Resources/Presence.png"/>
+                    <Button Grid.Row="1" Content="Aanwezigheid" x:Name="StartPrecenseAction"
+                            Style="{DynamicResource ButtonStyle}" FontFamily="Comic Sans MS" FontSize="22" />
+                </Grid>
+            </Border>
+
+            <Border Width="150" Height="200" Margin="25">
+                <Grid>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="1*"/>
+                        <RowDefinition Height="Auto"/>
+                    </Grid.RowDefinitions>
+                    <Image Source="/DayCare;component/Resources/close.png"/>
+                    <Button Grid.Row="1" Content="Sluiten" x:Name="CloseAction"
+                            Style="{DynamicResource ButtonStyle}" FontFamily="Comic Sans MS" FontSize="22" />
+                </Grid>
+            </Border>
+
+        </WrapPanel>
     </Grid>
 </UserControl>
