--- a/DayCare/DayCare/Views/Children/AddChildView.xaml
+++ b/DayCare/DayCare/Views/Children/AddChildView.xaml
@@ -1,19 +1,20 @@
-﻿<UserControl x:Class="DayCare.Views.Accounts.AddAccountView"
+﻿<UserControl x:Class="DayCare.Views.Children.AddChildView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:local="clr-namespace:DayCare.Views.Children"
              xmlns:cal="http://www.caliburnproject.org"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
-            <RowDefinition/>
+            <RowDefinition Height="1*"/>
         </Grid.RowDefinitions>
 
         <Border BorderBrush="Black" BorderThickness="0,0,0,4" Margin="10,0">
-            <TextBlock Text="Account toevoegen" Style="{DynamicResource LabelTitleStyle}" HorizontalAlignment="Center" />
+            <TextBlock Text="Kind toevoegen" Style="{DynamicResource LabelTitleStyle}" HorizontalAlignment="Center" />
         </Border>
 
         <Grid Grid.Row="1">
@@ -22,30 +23,24 @@
                 <RowDefinition Height="Auto"/>
                 <RowDefinition Height="1*"/>
                 <RowDefinition Height="Auto"/>
-
-
             </Grid.RowDefinitions>
 
             <GroupBox HorizontalAlignment="Stretch" Margin="10">
                 <GroupBox.Header>
-                    <TextBlock Text="Algemeen" Style="{DynamicResource GroupBoxHeaderStyle}" />
+                    <TextBlock Text="Detail" Style="{DynamicResource GroupBoxHeaderStyle}" />
                 </GroupBox.Header>
+
                 <ContentControl cal:View.Model="{Binding Detail}" Margin="10" />
+
             </GroupBox>
 
-            <GroupBox Grid.Row="1" HorizontalAlignment="Stretch" Margin="10">
-                <GroupBox.Header>
-                    <TextBlock Text="Kinderen" Style="{DynamicResource GroupBoxHeaderStyle}" />
-                </GroupBox.Header>
-                <ContentControl cal:View.Model="{Binding ChildrenDetail}" Margin="10" />
-            </GroupBox>
+
 
             <StackPanel Grid.Row="3" Orientation="Horizontal" HorizontalAlignment="Right" Margin="10">
                 <Button x:Name="SaveAction" Content="Bewaren" Style="{DynamicResource ButtonStyle}" Height="30" MinWidth="100" Margin="5,0"/>
                 <Button x:Name="CancelAction" Content="Annuleren" Style="{DynamicResource ButtonStyle}" Height="30" MinWidth="100" Margin="5,0"/>
             </StackPanel>
-
-
         </Grid>
+
     </Grid>
 </UserControl>
