--- a/DayCare/DayCare/Views/Children/ChildrenMainView.xaml
+++ b/DayCare/DayCare/Views/Children/ChildrenMainView.xaml
@@ -6,7 +6,7 @@
              xmlns:cal="http://www.caliburnproject.org"
              xmlns:vc="clr-namespace:DayCare.Converters"
              mc:Ignorable="d" 
-             d:DesignHeight="300" d:DesignWidth="300">
+             d:DesignHeight="300"  >
     <UserControl.Resources>
         <ResourceDictionary>
             <vc:BooleanVisibilityConverter x:Key="BooleanVisibilityConverter" />
