--- a/DayCare/DayCare/Views/Dashboard/DashBoardView.xaml
+++ b/DayCare/DayCare/Views/Dashboard/DashBoardView.xaml
@@ -26,6 +26,18 @@
                         <RowDefinition Height="1*"/>
                         <RowDefinition Height="Auto"/>
                     </Grid.RowDefinitions>
+                    <Image Source="/DayCare;component/Resources/Schedule.png"/>
+                    <Button Grid.Row="1" Content="Schedule" x:Name="ManageSchedulesAction"
+                            Style="{DynamicResource ButtonStyle}" FontFamily="Comic Sans MS" FontSize="22" />
+                </Grid>
+            </Border>
+            
+            <Border Width="150" Height="200" Margin="25">
+                <Grid>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="1*"/>
+                        <RowDefinition Height="Auto"/>
+                    </Grid.RowDefinitions>
                     <Image Source="/DayCare;component/Resources/Presence.png"/>
                     <Button Grid.Row="1" Content="Aanwezigheid" x:Name="StartPrecenseAction"
                             Style="{DynamicResource ButtonStyle}" FontFamily="Comic Sans MS" FontSize="22" />
