--- a/DayCare/DayCare/Views/Precense/PresenceMainView.xaml
+++ b/DayCare/DayCare/Views/Precense/PresenceMainView.xaml
@@ -4,9 +4,15 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:cal="http://www.caliburnproject.org"
+						 xmlns:vc="clr-namespace:DayCare.Converters"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
-    <Grid>
+  <UserControl.Resources>
+    <ResourceDictionary>
+      <vc:BooleanVisibilityConverter x:Key="BooleanVisibilityConverter" />
+    </ResourceDictionary>
+  </UserControl.Resources>
+  <Grid>
         <Border Margin="10" BorderBrush="Black" BorderThickness="1">
             <ScrollViewer>
             <ItemsControl ItemsSource="{Binding PresenceList}">
@@ -28,6 +34,8 @@
                                         <RowDefinition Height="40"/>
                                     </Grid.RowDefinitions>
                                         <Image VerticalAlignment="Center" HorizontalAlignment="Center" Source="/DayCare;component/Resources/olaf.png" />
+																	<Image Source="/DayCare;component/Resources/close.png" HorizontalAlignment="Right" VerticalAlignment="Top" Height="56" Margin="0" Width="51"
+																				 Visibility="{Binding ToLate, Converter={StaticResource BooleanVisibilityConverter}}"/>
                                         <Viewbox Grid.Row="1" Margin="0">
                                         <TextBlock Text="{Binding Name}" Style="{DynamicResource LabelStyle}" Height="41" Width="Auto" />
                                     </Viewbox>
