--- a/DayCare/DayCare/Views/Scheduler/EditChildScheduleView.xaml
+++ b/DayCare/DayCare/Views/Scheduler/EditChildScheduleView.xaml
@@ -7,144 +7,153 @@
              xmlns:vc="clr-namespace:DayCare.Converters"
              mc:Ignorable="d" 
              d:DesignHeight="500" d:DesignWidth="600">
-    <UserControl.Resources>
-        <ResourceDictionary>
-            <vc:BooleanVisibilityConverter x:Key="BooleanVisibilityConverter" />
-        </ResourceDictionary>
-    </UserControl.Resources>
-    <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition/>
-            <RowDefinition Height="Auto"/>
-        </Grid.RowDefinitions>
+	<UserControl.Resources>
+		<ResourceDictionary>
+			<vc:BooleanVisibilityConverter x:Key="BooleanVisibilityConverter" />
+		</ResourceDictionary>
+	</UserControl.Resources>
+	<Grid>
+		<Grid.RowDefinitions>
+			<RowDefinition Height="Auto"/>
+			<RowDefinition Height="Auto"/>
+			<RowDefinition/>
+			<RowDefinition Height="Auto"/>
+		</Grid.RowDefinitions>
 
-        <Border BorderBrush="Black" BorderThickness="0,0,0,4" Margin="10,0">
-            <TextBlock Text="Schema bewerken" Style="{DynamicResource LabelTitleStyle}" HorizontalAlignment="Center" />
-        </Border>
+		<Border BorderBrush="Black" BorderThickness="0,0,0,4" Margin="10,0">
+			<TextBlock Text="Schema bewerken" Style="{DynamicResource LabelTitleStyle}" HorizontalAlignment="Center" />
+		</Border>
 
-        <GroupBox Grid.Row="1" Margin="10">
-            <GroupBox.Header>
-                <TextBlock Text="Kind" Style="{DynamicResource GroupBoxHeaderStyle}" />
-            </GroupBox.Header>
-            <Grid Grid.Row="1" Margin="0,10,0,0">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="1*"/>
-                    <ColumnDefinition Width="1*"/>
-                </Grid.ColumnDefinitions>
+		<GroupBox Grid.Row="1" Margin="10">
+			<GroupBox.Header>
+				<TextBlock Text="Kind" Style="{DynamicResource GroupBoxHeaderStyle}" />
+			</GroupBox.Header>
+			<Grid Grid.Row="1" Margin="0,10,0,0">
+				<Grid.ColumnDefinitions>
+					<ColumnDefinition Width="1*"/>
+					<ColumnDefinition Width="1*"/>
+				</Grid.ColumnDefinitions>
 
-                <TextBlock Text="Naam:" Style="{DynamicResource LabelStyle}" />
-                <TextBlock Text="{Binding Name}" Grid.Column="1" Style="{DynamicResource LabelStyle}"/>
+				<TextBlock Text="Naam:" Style="{DynamicResource LabelStyle}" />
+				<TextBlock Text="{Binding Name}" Grid.Column="1" Style="{DynamicResource LabelStyle}"/>
 
-            </Grid>
-        </GroupBox>
+			</Grid>
+		</GroupBox>
 
-        <Grid Grid.Row="2">
-            <Grid.RowDefinitions>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition/>
-            </Grid.RowDefinitions>
+		<Grid Grid.Row="2">
+			<Grid.RowDefinitions>
+				<RowDefinition Height="Auto"/>
+				<RowDefinition/>
+			</Grid.RowDefinitions>
 
-            <StackPanel Margin="10,5" Orientation="Horizontal" HorizontalAlignment="Left">
-                <Button x:Name="AddAction" Content="Toevoegen" Margin="5,0" MinWidth="150" Height="30" Style="{DynamicResource ButtonStyle}" />
-                <Button x:Name="EditAction" Content="Wijzigen" Margin="5,0" MinWidth="150" Height="30" Style="{DynamicResource ButtonStyle}" 
+			<StackPanel Margin="10,5" Orientation="Horizontal" HorizontalAlignment="Left">
+				<Button x:Name="AddAction" Content="Toevoegen" Margin="5,0" MinWidth="150" Height="30" Style="{DynamicResource ButtonStyle}" />
+				<Button x:Name="EditAction" Content="Wijzigen" Margin="5,0" MinWidth="150" Height="30" Style="{DynamicResource ButtonStyle}" 
                         Visibility="{Binding IsItemSelected, Converter={StaticResource BooleanVisibilityConverter}}"/>
-                <Button x:Name="DeleteAction" Content="Verwijderen" Margin="5,0" MinWidth="150" Height="30" Style="{DynamicResource ButtonStyle}"
+				<Button x:Name="DeleteAction" Content="Verwijderen" Margin="5,0" MinWidth="150" Height="30" Style="{DynamicResource ButtonStyle}"
                          Visibility="{Binding IsItemSelected, Converter={StaticResource BooleanVisibilityConverter}}"/>
-            </StackPanel>
+			</StackPanel>
 
-            <ScrollViewer Grid.Row="2" Margin="2">
-                <ItemsControl ItemsSource="{Binding Items}" >
-                    <ItemsControl.ItemsPanel>
-                        <ItemsPanelTemplate>
-                            <StackPanel />
-                        </ItemsPanelTemplate>
-                    </ItemsControl.ItemsPanel>
-                    <ItemsControl.ItemTemplate>
-                        <DataTemplate>
-                            <Border BorderBrush="Black" BorderThickness="2" CornerRadius="5" MinHeight="75" Margin="5,10"
+			<ScrollViewer Grid.Row="2" Margin="2">
+				<ItemsControl ItemsSource="{Binding Items}" >
+					<ItemsControl.ItemsPanel>
+						<ItemsPanelTemplate>
+							<StackPanel />
+						</ItemsPanelTemplate>
+					</ItemsControl.ItemsPanel>
+					<ItemsControl.ItemTemplate>
+						<DataTemplate>
+							<Border BorderBrush="Black" BorderThickness="2" CornerRadius="5" MinHeight="75" Margin="5,10"
                                 cal:Message.Attach="[Event MouseUp] = [Action SelectItem($this)]">
 
-                                <Grid>
-                                    <Grid.ColumnDefinitions>
-                                        <ColumnDefinition Width="1*" />
-                                        <ColumnDefinition Width="2*" />
-                                    </Grid.ColumnDefinitions>
+								<Grid>
+									<Grid.ColumnDefinitions>
+										<ColumnDefinition Width="1*" />
+										<ColumnDefinition Width="2*" />
+									</Grid.ColumnDefinitions>
 
-                                    <TextBlock Text="{Binding .Name}" Margin="25,0" Style="{DynamicResource LabelStyle}" VerticalAlignment="Center" />
+									<TextBlock Text="{Binding .Name}" Margin="25,0" Style="{DynamicResource LabelStyle}" VerticalAlignment="Center" />
 
-                                    <Border Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Left" >
-                                        <Grid>
-                                            <Grid.RowDefinitions>
-                                                <RowDefinition Height="16"/>
-                                                <RowDefinition Height="Auto" MinHeight="15"/>
-                                                <RowDefinition Height="Auto" MinHeight="15"/>
-                                            </Grid.RowDefinitions>
-                                            <Grid.ColumnDefinitions>
-                                                <ColumnDefinition Width="1*" MinWidth="30"/>
-                                                <ColumnDefinition Width="1*" MinWidth="30"/>
-                                                <ColumnDefinition Width="1*" MinWidth="30"/>
-                                                <ColumnDefinition Width="1*" MinWidth="30"/>
-                                                <ColumnDefinition Width="1*" MinWidth="30"/>
-                                            </Grid.ColumnDefinitions>
-                                            
-                                            <Border Grid.ColumnSpan="5" BorderThickness="0,0,0,1" BorderBrush="Black" Margin="0,0,0,2" />
+									<ItemsControl ItemsSource="{Binding Tag.Schedules}" Grid.Column="1">
+										<ItemsControl.ItemsPanel>
+											<ItemsPanelTemplate>
+												<StackPanel Orientation="Horizontal" />
+											</ItemsPanelTemplate>
+										</ItemsControl.ItemsPanel>
+										<ItemsControl.ItemTemplate>
+											<DataTemplate>
+												<Border  VerticalAlignment="Center" HorizontalAlignment="Left"  Margin="10,0">
+													<Grid>
+														<Grid.RowDefinitions>
+															<RowDefinition Height="16"/>
+															<RowDefinition Height="Auto" MinHeight="15"/>
+															<RowDefinition Height="Auto" MinHeight="15"/>
+														</Grid.RowDefinitions>
+														<Grid.ColumnDefinitions>
+															<ColumnDefinition Width="1*" MinWidth="30"/>
+															<ColumnDefinition Width="1*" MinWidth="30"/>
+															<ColumnDefinition Width="1*" MinWidth="30"/>
+															<ColumnDefinition Width="1*" MinWidth="30"/>
+															<ColumnDefinition Width="1*" MinWidth="30"/>
+														</Grid.ColumnDefinitions>
 
-                                            <TextBlock Text="M" VerticalAlignment="Center" HorizontalAlignment="Center" Margin="0,0,0,4"/>
-                                            <TextBlock Text="D" VerticalAlignment="Center" HorizontalAlignment="Center" Margin="0,0,0,4" Grid.Column="1" />
-                                            <TextBlock Text="W" VerticalAlignment="Center" HorizontalAlignment="Center" Margin="0,0,0,4" Grid.Column="2" />
-                                            <TextBlock Text="D" VerticalAlignment="Center" HorizontalAlignment="Center" Margin="0,0,0,4" Grid.Column="3" />
-                                            <TextBlock Text="V" VerticalAlignment="Center" HorizontalAlignment="Center" Margin="0,0,0,4" Grid.Column="4" />
+														<Border Grid.ColumnSpan="5" BorderThickness="0,0,0,1" BorderBrush="Black" Margin="0,0,0,2" />
 
-                                            <Rectangle Width="30" Height="15" Fill="{DynamicResource DayScheduleBrush}" Grid.Row="1" Grid.Column="0"
-                                                       Visibility="{Binding Tag.MondayMorning, Converter={StaticResource BooleanVisibilityConverter}}"/>
-                                            <Rectangle Width="30" Height="15" Fill="{DynamicResource DayScheduleBrush}" Grid.Row="1" Grid.Column="1"
-                                                       Visibility="{Binding Tag.TuesdayMorning, Converter={StaticResource BooleanVisibilityConverter}}"/>
-                                            <Rectangle Width="30" Height="15" Fill="{DynamicResource DayScheduleBrush}" Grid.Row="1" Grid.Column="2"
-                                                       Visibility="{Binding Tag.WednesdayMorning, Converter={StaticResource BooleanVisibilityConverter}}"/>
-                                            <Rectangle Width="30" Height="15" Fill="{DynamicResource DayScheduleBrush}" Grid.Row="1" Grid.Column="3"
-                                                       Visibility="{Binding Tag.ThursdayMorning, Converter={StaticResource BooleanVisibilityConverter}}"/>
-                                            <Rectangle Width="30" Height="15" Fill="{DynamicResource DayScheduleBrush}" Grid.Row="1" Grid.Column="4"
-                                                       Visibility="{Binding Tag.FridayMorning, Converter={StaticResource BooleanVisibilityConverter}}"/>
+														<TextBlock Text="M" VerticalAlignment="Center" HorizontalAlignment="Center" Margin="0,0,0,4"/>
+														<TextBlock Text="D" VerticalAlignment="Center" HorizontalAlignment="Center" Margin="0,0,0,4" Grid.Column="1" />
+														<TextBlock Text="W" VerticalAlignment="Center" HorizontalAlignment="Center" Margin="0,0,0,4" Grid.Column="2" />
+														<TextBlock Text="D" VerticalAlignment="Center" HorizontalAlignment="Center" Margin="0,0,0,4" Grid.Column="3" />
+														<TextBlock Text="V" VerticalAlignment="Center" HorizontalAlignment="Center" Margin="0,0,0,4" Grid.Column="4" />
 
-                                            <Rectangle Width="30" Height="15" Fill="{DynamicResource DayScheduleBrush}" Grid.Row="2" Grid.Column="0"
-                                                       Visibility="{Binding Tag.MondayAfternoon, Converter={StaticResource BooleanVisibilityConverter}}"/>
-                                            <Rectangle Width="30" Height="15" Fill="{DynamicResource DayScheduleBrush}" Grid.Row="2" Grid.Column="1"
-                                                       Visibility="{Binding Tag.TuesdayAfternoon, Converter={StaticResource BooleanVisibilityConverter}}"/>
-                                            <Rectangle Width="30" Height="15" Fill="{DynamicResource DayScheduleBrush}" Grid.Row="2" Grid.Column="2"
-                                                       Visibility="{Binding Tag. WednesdayAfternoon, Converter={StaticResource BooleanVisibilityConverter}}"/>
-                                            <Rectangle Width="30" Height="15" Fill="{DynamicResource DayScheduleBrush}" Grid.Row="2" Grid.Column="3"
-                                                       Visibility="{Binding Tag.ThursdayAfternoon, Converter={StaticResource BooleanVisibilityConverter}}"/>
-                                            <Rectangle Width="30" Height="15" Fill="{DynamicResource DayScheduleBrush}" Grid.Row="2" Grid.Column="4"
-                                                       Visibility="{Binding Tag.FridayAfternoon, Converter={StaticResource BooleanVisibilityConverter}}"/>
-                                        </Grid>
-                                    </Border>
+														<Rectangle Width="30" Height="15" Fill="{DynamicResource DayScheduleBrush}" Grid.Row="1" Grid.Column="0"
+                                                       Visibility="{Binding MondayMorning, Converter={StaticResource BooleanVisibilityConverter}}"/>
+														<Rectangle Width="30" Height="15" Fill="{DynamicResource DayScheduleBrush}" Grid.Row="1" Grid.Column="1"
+                                                       Visibility="{Binding TuesdayMorning, Converter={StaticResource BooleanVisibilityConverter}}"/>
+														<Rectangle Width="30" Height="15" Fill="{DynamicResource DayScheduleBrush}" Grid.Row="1" Grid.Column="2"
+                                                       Visibility="{Binding WednesdayMorning, Converter={StaticResource BooleanVisibilityConverter}}"/>
+														<Rectangle Width="30" Height="15" Fill="{DynamicResource DayScheduleBrush}" Grid.Row="1" Grid.Column="3"
+                                                       Visibility="{Binding ThursdayMorning, Converter={StaticResource BooleanVisibilityConverter}}"/>
+														<Rectangle Width="30" Height="15" Fill="{DynamicResource DayScheduleBrush}" Grid.Row="1" Grid.Column="4"
+                                                       Visibility="{Binding FridayMorning, Converter={StaticResource BooleanVisibilityConverter}}"/>
 
+														<Rectangle Width="30" Height="15" Fill="{DynamicResource DayScheduleBrush}" Grid.Row="2" Grid.Column="0"
+                                                       Visibility="{Binding MondayAfternoon, Converter={StaticResource BooleanVisibilityConverter}}"/>
+														<Rectangle Width="30" Height="15" Fill="{DynamicResource DayScheduleBrush}" Grid.Row="2" Grid.Column="1"
+                                                       Visibility="{Binding TuesdayAfternoon, Converter={StaticResource BooleanVisibilityConverter}}"/>
+														<Rectangle Width="30" Height="15" Fill="{DynamicResource DayScheduleBrush}" Grid.Row="2" Grid.Column="2"
+                                                       Visibility="{Binding  WednesdayAfternoon, Converter={StaticResource BooleanVisibilityConverter}}"/>
+														<Rectangle Width="30" Height="15" Fill="{DynamicResource DayScheduleBrush}" Grid.Row="2" Grid.Column="3"
+                                                       Visibility="{Binding ThursdayAfternoon, Converter={StaticResource BooleanVisibilityConverter}}"/>
+														<Rectangle Width="30" Height="15" Fill="{DynamicResource DayScheduleBrush}" Grid.Row="2" Grid.Column="4"
+                                                       Visibility="{Binding FridayAfternoon, Converter={StaticResource BooleanVisibilityConverter}}"/>
+													</Grid>
+												</Border>
+											</DataTemplate>
+										</ItemsControl.ItemTemplate>
+									</ItemsControl>
+								</Grid>
 
-                                </Grid>
+								<Border.Style>
+									<Style TargetType="Border">
+										<Setter Property="Background" Value="#FFEE9449" />
+										<Style.Triggers>
+											<DataTrigger Binding="{Binding Selected}" Value="True" >
+												<Setter Property="Background" Value="#FF88D11E" />
+											</DataTrigger>
+										</Style.Triggers>
+									</Style>
+								</Border.Style>
+							</Border>
+						</DataTemplate>
+					</ItemsControl.ItemTemplate>
+				</ItemsControl>
+			</ScrollViewer>
 
-                                <Border.Style>
-                                    <Style TargetType="Border">
-                                        <Setter Property="Background" Value="#FFEE9449" />
-                                        <Style.Triggers>
-                                            <DataTrigger Binding="{Binding Selected}" Value="True" >
-                                                <Setter Property="Background" Value="#FF88D11E" />
-                                            </DataTrigger>
-                                        </Style.Triggers>
-                                    </Style>
-                                </Border.Style>
-                            </Border>
-                        </DataTemplate>
-                    </ItemsControl.ItemTemplate>
-                </ItemsControl>
-            </ScrollViewer>
+		</Grid>
 
-        </Grid>
-
-        <StackPanel Grid.Row="3" Orientation="Horizontal" HorizontalAlignment="Right" Margin="0,10,10,10">
-            <!--<Button x:Name="SaveAction" Content="Bewaren" Style="{DynamicResource ButtonStyle}" Height="30" MinWidth="100" Margin="5,0"/>-->
-            <Button x:Name="BackAction" Content="Terug" Style="{DynamicResource ButtonStyle}" Height="30" MinWidth="100" Margin="5,0"/>
-        </StackPanel>
-    </Grid>
+		<StackPanel Grid.Row="3" Orientation="Horizontal" HorizontalAlignment="Right" Margin="0,10,10,10">
+			<!--<Button x:Name="SaveAction" Content="Bewaren" Style="{DynamicResource ButtonStyle}" Height="30" MinWidth="100" Margin="5,0"/>-->
+			<Button x:Name="BackAction" Content="Terug" Style="{DynamicResource ButtonStyle}" Height="30" MinWidth="100" Margin="5,0"/>
+		</StackPanel>
+	</Grid>
 </UserControl>
